<resources>
    <string name="app_name">Playlist Manager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show_playlists">Show Playlists</string>
    <string name="nueva_playlist">Nueva Playlist</string>
    <string name="publica">Publica</string>
    <string name="nombre_de_la_playlist">Nueva Playlist</string>
    <string name="nombre">Nombre</string>
    <string name="crear">Crear</string>
</resources>