<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B8A86"
    android:onClick="onClick_newPlaylist"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImageViewPlayButton"
        android:layout_width="51dp"
        android:layout_height="49dp"

        android:layout_marginEnd="9dp"
        android:layout_marginBottom="15dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@+string/Play Buttom"
        android:onClick="onClick_playStop"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@+string/New Playlist Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_newplaylist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="411dp"
        android:layout_height="578dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="17dp"
        android:background="#EBECE8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/simpleProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="336dp"
        android:layout_height="18dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImageViewPlayButton"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:onClick="search"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addSongLayout"
        android:layout_width="406dp"
        android:layout_height="182dp"
        android:background="#AAA8A8"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Agregar Cancion Buscada?"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombreCancion"
            android:layout_width="269dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="Nombre de la cancion"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="24dp"
            android:onClick="addToPlaylist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeAddSong"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

        <TextView
            android:id="@+id/nombreArtista"
            android:layout_width="263dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="Nombre Artista"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreCancion" />

        <ImageButton
            android:id="@+id/closeAddSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#F44336"
            android:onClick="onClick_closeAddSong"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/onTopLayout"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:background="#C4C5C4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:visibility="visible"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/newPlaylistTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:text="@string/nueva_playlist"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/newPlaylistNameTitle"
            app:layout_constraintEnd_toStartOf="@+id/closeNewPlaylist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newPlaylistNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="9dp"
            android:text="@string/nombre"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/isPublicRadioButton"
            app:layout_constraintEnd_toStartOf="@+id/editTextPlaylistName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPlaylistTitle" />

        <EditText
            android:id="@+id/editTextPlaylistName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/nombre_de_la_playlist"
            android:backgroundTint="#425E23"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nombre_de_la_playlist"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/createPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newPlaylistNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/closeNewPlaylist" />

        <CheckBox
            android:id="@+id/isPublicRadioButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="17dp"
            android:checked="false"
            android:text="@string/publica"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/createPlaylist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPlaylistNameTitle" />

        <Button
            android:id="@+id/createPlaylist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#4CAF50"
            android:onClick="onClick_createNewPlaylist"
            android:text="@string/crear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/isPublicRadioButton"
            app:layout_constraintTop_toBottomOf="@+id/editTextPlaylistName" />

        <ImageButton
            android:id="@+id/closeNewPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#F44336"
            android:onClick="onClick_closeNewPlaylist"
            app:layout_constraintBottom_toTopOf="@+id/editTextPlaylistName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newPlaylistTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>